# django-rest-framework-template-withAuth

./: README.md
backend/: pyproject.toml
backend/apps/users/: admin.py  serializers.py
backend/apps/users/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py
nginx/: backend.conf
